# mini-cpp-proj

./: .gitignore  LICENSE  include
armstrong_number/: CMakeCache.txt  CMakeLists.txt  Makefile  armstrong_number.kdev4  cmake_install.cmake  common.hpp  include  main.cpp  number_helpers.hpp
armstrong_number/.kdev4/: armstrong_number.kdev4
